--- a/NuestrosServicios.html
+++ b/NuestrosServicios.html
@@ -13,8 +13,8 @@
     <br>
     <a href="https://github.com/Nando51/DisennoWeb/upload/master">Ir a mi
       repositorio</a> <br>
-    <a href="/Nando51/DisennoWeb/master/nosotros.html">Nosotros</a> <br>
-    <a href="/Nando51/DisennoWeb/master/index.html">Index</a> <br>
+    <a href="https://rawgit.com/Nando51/DisennoWeb/master/nosotros.html">Nosotros</a> <br>
+    <a href="https://rawgit.com/Nando51/DisennoWeb/master/index.html">Index</a> <br>
     <a href="mailto:f.coloma@ua.es">CONTACTO CON LA EMPRESA</a> <a name="pr"></a>
     <h1> NUESTROS SERVICIOS </h1>
     <a name="prep"></a>
