--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       <h1> ÍNDICE </h1>
       <a href="https://es.wikipedia.org/wiki/Espectroscopia_de_fotoelectrones_emitidos_por_rayos_X">
         XPS en Wikipedia</a> <br>
-      <a href="../Nando51/DisennoWeb/master/nosotros.html">Nosotros</a> <br>
-      <a href="../Nando51/DisennoWeb/master//NuestrosServicios.html">Nuestros
+      <a href="https://rawgit.com/Nando51/DisennoWeb/master/nosotros.html">Nosotros</a> <br>
+      <a href="https://rawgit.com/Nando51/DisennoWeb/master/NuestrosServicios.html">Nuestros
         Servicios</a> </nav>
+    
   </body>
 </html>
