--- a/nosotros.html
+++ b/nosotros.html
@@ -19,8 +19,9 @@
     <br>
     <a href="https://github.com/Nando51/DisennoWeb/upload/master">Ir a mi
       repositorio</a> <br>
-    <a href="../Nando51/DisennoWeb/master/NuestrosServicios.html">Nuestros servicios</a> <br>
-    <a href="../Nando51/DisennoWeb/master/index.html">INDEX</a>
+    <a href="https://rawgit.com/Nando51/DisennoWeb/master/NuestrosServicios.html">Nuestros
+      servicios</a> <br>
+    <a href="https://rawgit.com/Nando51/DisennoWeb/master/index.html">INDEX</a>
     
   </body>
 </html>
